Tatt inn og tilpasset kode fra verifier proxy (polling feiler same device)